# ntui

./: CLAUDE.md  Cargo.toml  LICENSE-APACHE  README.md
.cargo-husky/hooks/: pre-commit  pre-push
.github/workflows/: ci.yml  docs.yml
docs/: README.md  architecture.md  getting-started.md  hooks.md  widgets.md
docs/superpowers/plans/: 2026-07-02-ntui.md
docs/superpowers/specs/: 2026-07-02-ntui-design.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: render_text.rs  truncate_line.rs  wrap_text.rs
ntui/: Cargo.toml
ntui-macros/: Cargo.toml
ntui-macros/src/: lib.rs
ntui/benches/: engine.rs
ntui/examples/: claude_code.rs  counter.rs  demo.rs  inline_chat.rs  list.rs  spinner.rs  widgets_gallery.rs
ntui/src/: buffer.rs  component.rs  element.rs  error.rs  fiber.rs  layout.rs  lib.rs  paint.rs  props.rs  reconciler.rs  runtime.rs  style.rs  test_util.rs  testing.rs  text.rs
ntui/src/backend/: ansi.rs  fullscreen.rs  inline.rs  mod.rs  test.rs
ntui/src/hooks/: app.rs  context.rs  effect.rs  input.rs  mod.rs  scroll.rs  scrollback.rs  state.rs  task.rs  timer.rs
ntui/src/widgets/: badge.rs  banner.rs  button.rs  callback.rs  checkbox.rs  divider.rs  focus.rs  gradient_text.rs  mod.rs  modal.rs  progress.rs  select.rs  spinner.rs  table.rs  tabs.rs  text_input.rs  theme.rs  toast.rs  tooltip.rs
ntui/tests/: macros.rs
web/: README.md  astro.config.mjs  package.json  pnpm-lock.yaml
web/public/: llms.txt  robots.txt
web/src/: content.config.ts
web/src/components/: Seo.astro
web/src/layouts/: DocsLayout.astro
web/src/lib/: docsNav.ts  url.ts
web/src/pages/: index.astro
web/src/pages/docs/: [...slug].astro  index.astro  primitives.astro
