[package]
name = "ntui-macros"
version = "0.1.0"
edition = "2024"
description = "Proc macros (element! and #[component]) for the ntui TUI library."
license = "MIT OR Apache-2.0"
repository = "https://github.com/quinnjr/ntui"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.106"
quote = "1.0.46"
syn = { version = "2.0.118", features = ["full"] }
