[package]
name = "ntui"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures = "0.3.32"
ntui-macros = { version = "0.1.0", path = "../ntui-macros" }
taffy = "0.11.0"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt", "macros", "sync", "time"] }

[dev-dependencies]
insta = "1.48.0"
tokio = { version = "1.52.3", features = ["rt", "macros", "time", "test-util"] }
