[package]
name = "ntui"
version = "0.1.0"
edition = "2024"
description = "An Ink-style TUI library for Rust: components, hooks, flexbox layout, and fullscreen rendering."
license = "MIT OR Apache-2.0"

[dependencies]
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures = "0.3.32"
ntui-macros = { version = "0.1.0", path = "../ntui-macros" }
taffy = "0.11.0"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt", "macros", "sync", "time"] }

[features]
# Internal, unstable: exposes pub(crate) hot-path helpers to out-of-crate test
# tooling. Not part of the public API; do not depend on these.
bench = []
fuzz = []

[dev-dependencies]
cargo-husky = { version = "1.5", default-features = false, features = ["user-hooks"] }
criterion = "0.8.2"
tokio = { version = "1.52.3", features = ["rt", "macros", "time", "test-util"] }

[[bench]]
name = "engine"
harness = false
required-features = ["bench"]
